@@ -1,3 +1,9 @@
+2009-06-30  Ira Rosen  <irar@il.ibm.com>
+
+	PR tree-optimization/40542
+	* tree-vect-analyze.c (vect_determine_vectorization_factor): Don't
+	vectorize volatile types.
+
 2009-06-29  Janis Johnson  <janis187@us.ibm.com>
 
 	PR c/39902
